--- a/css/style.css
+++ b/css/style.css
@@ -169,3 +169,212 @@ a {
   text-align: left;
   font-size: 16px;
 }
+
+#profile {
+  background-color: #ECEFF1;
+}
+
+.profile-group {
+  display: flex;
+  padding: 30px 0 90px 0;
+}
+
+.left-content {
+  width: 50%;
+}
+
+.right-content {
+  width: 50%;
+}
+
+.my-face {
+  width: 250px;
+  height: 250px;
+  margin: 0 auto;
+  border-radius: 50%;
+  background-image: url(../img/my-icon.jpg)
+}
+
+.description-title {
+  margin: 20px 0 5px 0;
+  font-size: 20px;
+}
+
+.description-title:first-child {
+  margin-top: 0;
+}
+
+.description-text {
+  font-size: 16px;
+}
+
+.contact-group {
+  display: flex;
+  width: 800px;
+  padding: 30px 0 90px 0;
+  margin: 0 auto;
+}
+
+.left-contact-content {
+  width: 130px;
+  margin: 0 auto;
+}
+
+.link-text {
+  text-decoration: underline;
+  color: #212121;
+}
+
+.right-contact-content {
+  width: 170px;
+  margin: 0 auto;
+}
+
+.right-contact-content
+.fa {
+  font-size: 50px;
+  margin-right: 20px;
+}
+
+.right-contact-content
+.fa:last-child {
+  margin-right: 0;
+}
+
+footer {
+  width: 100%;
+  height: 60px;
+  background-color: #EC715F;
+  line-height: 60px;
+}
+
+.copyright {
+  font-size: 16px;
+  color: #FAFAFA;
+  text-align: center;
+}
+
+@media screen and (max-width: 768px) {
+  header {
+    height: 50px;
+  }
+
+  .container {
+    width: 90%;
+  }
+
+  .logo {
+    height: 50px;
+  }
+
+  .menu-box {
+    width: 40px;
+    height: 40px;
+    margin-right: 5%;
+    border: 1px solid #FAFAFA;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    margin-left: auto;
+  }
+
+  .list-bar:first-child {
+    margin-top: 10px;
+  }
+
+  .list-bar {
+    display: block;
+    width: 25px;
+    height: 2px;
+    margin: 5px auto;
+    background-color: #FAFAFA;
+  }
+
+  .nav-list {
+    display: none;
+    width: 100%;
+    line-height: 50px;
+    border-bottom: 1px solid gray;
+    text-align: center;
+    background-color: rgba(0,0,0,.9);
+  }
+
+  #mv {
+    background-image: url(../img/code.png)
+  }
+
+  .mv-title {
+    font-size: 40px;
+  }
+
+  .mv-text {
+    font-size: 18px;
+  }
+
+  .sp-none {
+    display: none;
+  }
+
+  .production {
+    margin-right: 0px;
+  }
+
+  .production-group {
+    width: 300px;
+  }
+
+  #feature {
+    background-size: cover;
+    background-position: center;
+  }
+
+  .strength-group {
+    flex-flow: row wrap;
+    width: 320px;
+  }
+
+  .strength:first-child {
+    margin-top: 0;
+  }
+
+  .strength {
+    margin-top: 10px;
+    margin-right: 0px;
+  }
+
+  .profile-group {
+    flex-flow: row wrap;
+    text-align: center;
+  }
+
+  .profile-group .left-content {
+    margin-bottom: 20px;
+  }
+
+  .left-content {
+    width: 100%;
+  }
+
+  .right-content {
+    width: 100%;
+  }
+
+  .contact-group {
+    flex-flow: row wrap;
+    width: 100%;
+    text-align: center;
+  }
+
+  .left-contact-content {
+    width: 100%;
+  }
+
+  .right-contact-content {
+    width: 100%;
+    margin-top: 20px;
+  }
+
+  .right-contact-content .fa {
+    font-size: 50px;
+    margin-right: 8px;
+  }
+}
